librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

pub const crocksdb_table_property_t_kDataSize: crocksdb_table_property_t = 1;
pub const crocksdb_table_property_t_kIndexSize: crocksdb_table_property_t = 2;
pub const crocksdb_table_property_t_kFilterSize: crocksdb_table_property_t = 3;
pub const crocksdb_table_property_t_kRawKeySize: crocksdb_table_property_t = 4;
pub const crocksdb_table_property_t_kRawValueSize: crocksdb_table_property_t = 5;
pub const crocksdb_table_property_t_kNumDataBlocks: crocksdb_table_property_t = 6;
pub const crocksdb_table_property_t_kNumEntries: crocksdb_table_property_t = 7;
pub const crocksdb_table_property_t_kFormatVersion: crocksdb_table_property_t = 8;
pub const crocksdb_table_property_t_kFixedKeyLen: crocksdb_table_property_t = 9;
pub const crocksdb_table_property_t_kColumnFamilyID: crocksdb_table_property_t = 10;
pub const crocksdb_table_property_t_kColumnFamilyName: crocksdb_table_property_t = 11;
pub const crocksdb_table_property_t_kFilterPolicyName: crocksdb_table_property_t = 12;
pub const crocksdb_table_property_t_kComparatorName: crocksdb_table_property_t = 13;
pub const crocksdb_table_property_t_kMergeOperatorName: crocksdb_table_property_t = 14;
pub const crocksdb_table_property_t_kPrefixExtractorName: crocksdb_table_property_t = 15;
pub const crocksdb_table_property_t_kPropertyCollectorsNames: crocksdb_table_property_t = 16;
pub const crocksdb_table_property_t_kCompressionName: crocksdb_table_property_t = 17;
pub type crocksdb_table_property_t = u32;
pub const crocksdb_ratelimiter_mode_t_kReadsOnly: crocksdb_ratelimiter_mode_t = 1;
pub const crocksdb_ratelimiter_mode_t_kWritesOnly: crocksdb_ratelimiter_mode_t = 2;
pub const crocksdb_ratelimiter_mode_t_kAllIo: crocksdb_ratelimiter_mode_t = 3;
pub type crocksdb_ratelimiter_mode_t = u32;
pub const crocksdb_backgrounderrorreason_t_kFlush: crocksdb_backgrounderrorreason_t = 1;
pub const crocksdb_backgrounderrorreason_t_kCompaction: crocksdb_backgrounderrorreason_t = 2;
pub const crocksdb_backgrounderrorreason_t_kWriteCallback: crocksdb_backgrounderrorreason_t = 3;
pub const crocksdb_backgrounderrorreason_t_kMemTable: crocksdb_backgrounderrorreason_t = 4;
pub type crocksdb_backgrounderrorreason_t = u32;
extern "C" {
    pub fn crocksdb_open(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_open_with_ttl(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        ttl: libc::c_int,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_open_for_read_only(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        error_if_log_file_exist: libc::c_uchar,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_status_ptr_get_error(
        arg1: *mut crocksdb_status_ptr_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_backup_engine_open(
        options: *const crocksdb_options_t,
        path: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_backup_engine_t;
}
extern "C" {
    pub fn crocksdb_backup_engine_create_new_backup(
        be: *mut crocksdb_backup_engine_t,
        db: *mut crocksdb_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_backup_engine_purge_old_backups(
        be: *mut crocksdb_backup_engine_t,
        num_backups_to_keep: u32,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_restore_options_create() -> *mut crocksdb_restore_options_t;
}
extern "C" {
    pub fn crocksdb_restore_options_destroy(opt: *mut crocksdb_restore_options_t);
}
extern "C" {
    pub fn crocksdb_restore_options_set_keep_log_files(
        opt: *mut crocksdb_restore_options_t,
        v: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_backup_engine_restore_db_from_latest_backup(
        be: *mut crocksdb_backup_engine_t,
        db_dir: *const libc::c_char,
        wal_dir: *const libc::c_char,
        restore_options: *const crocksdb_restore_options_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_backup_engine_get_backup_info(
        be: *mut crocksdb_backup_engine_t,
    ) -> *const crocksdb_backup_engine_info_t;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_count(
        info: *const crocksdb_backup_engine_info_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_timestamp(
        info: *const crocksdb_backup_engine_info_t,
        index: libc::c_int,
    ) -> i64;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_backup_id(
        info: *const crocksdb_backup_engine_info_t,
        index: libc::c_int,
    ) -> u32;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_size(
        info: *const crocksdb_backup_engine_info_t,
        index: libc::c_int,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_number_files(
        info: *const crocksdb_backup_engine_info_t,
        index: libc::c_int,
    ) -> u32;
}
extern "C" {
    pub fn crocksdb_backup_engine_info_destroy(info: *const crocksdb_backup_engine_info_t);
}
extern "C" {
    pub fn crocksdb_backup_engine_close(be: *mut crocksdb_backup_engine_t);
}
extern "C" {
    pub fn crocksdb_open_column_families(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        num_column_families: libc::c_int,
        column_family_names: *mut *const libc::c_char,
        column_family_options: *mut *const crocksdb_options_t,
        column_family_handles: *mut *mut crocksdb_column_family_handle_t,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_open_column_families_with_ttl(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        num_column_families: libc::c_int,
        column_family_names: *mut *const libc::c_char,
        column_family_options: *mut *const crocksdb_options_t,
        ttl_array: *const i32,
        read_only: libc::c_uchar,
        column_family_handles: *mut *mut crocksdb_column_family_handle_t,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_open_for_read_only_column_families(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        num_column_families: libc::c_int,
        column_family_names: *mut *const libc::c_char,
        column_family_options: *mut *const crocksdb_options_t,
        column_family_handles: *mut *mut crocksdb_column_family_handle_t,
        error_if_log_file_exist: libc::c_uchar,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_t;
}
extern "C" {
    pub fn crocksdb_list_column_families(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        lencf: *mut usize,
        errptr: *mut *mut libc::c_char,
    ) -> *mut *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_list_column_families_destroy(list: *mut *mut libc::c_char, len: usize);
}
extern "C" {
    pub fn crocksdb_create_column_family(
        db: *mut crocksdb_t,
        column_family_options: *const crocksdb_options_t,
        column_family_name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    ) -> *mut crocksdb_column_family_handle_t;
}
extern "C" {
    pub fn crocksdb_drop_column_family(
        db: *mut crocksdb_t,
        handle: *mut crocksdb_column_family_handle_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_column_family_handle_id(arg1: *mut crocksdb_column_family_handle_t) -> u32;
}
extern "C" {
    pub fn crocksdb_column_family_handle_destroy(arg1: *mut crocksdb_column_family_handle_t);
}
extern "C" {
    pub fn crocksdb_close(db: *mut crocksdb_t);
}
extern "C" {
    pub fn crocksdb_pause_bg_work(db: *mut crocksdb_t);
}
extern "C" {
    pub fn crocksdb_continue_bg_work(db: *mut crocksdb_t);
}
extern "C" {
    pub fn crocksdb_put(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_put_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_delete(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        key: *const libc::c_char,
        keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_delete_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_single_delete(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        key: *const libc::c_char,
        keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_single_delete_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_delete_range_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        begin_key: *const libc::c_char,
        begin_keylen: usize,
        end_key: *const libc::c_char,
        end_keylen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_merge(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_merge_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        keylen: usize,
        val: *const libc::c_char,
        vallen: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_write(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        batch: *mut crocksdb_writebatch_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_write_multi_batch(
        db: *mut crocksdb_t,
        options: *const crocksdb_writeoptions_t,
        batches: *mut *mut crocksdb_writebatch_t,
        batch_size: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_get(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
        key: *const libc::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_get_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut libc::c_char,
    ) -> *mut libc::c_char;
}
